vlib/v/checker/tests/if_non_bool_cond.out
vlib/v/checker/tests/if_non_bool_cond.vv:2:5: error: non-bool type `string` used as if condition
    1 | fn main() {
    2 |     if '10' {
      |        ~~~~
    3 |         println('10')
    4 |     }
vlib/v/checker/tests/if_non_bool_cond.vv:6:5: error: non-bool type `int literal` used as if condition
    4 |     }
    5 | 
    6 |     if 5 {
      |        ^
    7 |         println(5)
    8 |     }
vlib/v/checker/tests/if_non_bool_cond.vv:10:5: error: non-bool type `void` used as if condition
    8 |     }
    9 | 
   10 |     if println('v') {
      |        ~~~~~~~~~~~~
   11 |         println('println')
   12 |     }
