vlib/v/checker/tests/if_non_bool_cond.vv
fn main() {
	if '10' {
		println('10')
	}

	if 5 {
		println(5)
	}

	if println('v') {
		println('println')
	}
}
